Remove the coverage report since its leading to my personal site

--- a/test/storybook/docs/Testing/Coverage-Report.mdx
+++ b/test/storybook/docs/Testing/Coverage-Report.mdx
@@ -9,7 +9,7 @@ import methodData from './Decorators/Method/data/test-coverage.json';
 import extendsData from './Behavior/Extends/data/test-coverage.json';
 import React from 'react';
 
-<Meta title="Testing/Coverage Report"/>
+<Meta title="Testing/Coverage Report" tags={['dev-only']} />
 
 # Test Coverage Report
 
